clean up various findbugs warnings. Fix filter and baseline bug options
git-svn-id: https://findbugs.googlecode.com/svn/trunk@13318 eae3c2d3-9b19-0410-a86e-396b6ccb6ab3